Release notes for Agora-Moodle2 (http://agora.xtec.cat)

More information on each of the fixes can be found in the project
development home at https://github.com/projectestac/agora_moodle2

Changes 16.08.22
---------------------------------------------------------------------------------------
- Moodle upgraded to from 3.1.1 (Trello #1268)
- Updated LangPacks
- Updated auth/googleoauth2
- Updated blocks/progress
- Updated local/mobile
- Updated mod/choicegroup
- Updated mod/geogebra
- Updated mod/hotpot
- Updated mod/jclic
- Updated mod/journal
- Updated mod/questionnaire
- Updated mod/qv
- Updated all related wiris plugins


Changes 16.05.03
---------------------------------------------------------------------------------------
- Moodle upgraded to from 2.8.12 (Trello #1213)
- Updated local_mobile to 2.8.310
- Updated mod/questionaire
- Updated local/oauth
- local_agora: Changed default exceptionerror to avoid error in admin pages when datadir is not writable
- Zipped old log cron and mailer files until they will be deleted (Trello #1234)
- Updated mod/hotpot


Changes 16.05.03
---------------------------------------------------------------------------------------
- Added support to split data folders if necessary (Trello #1230)


Changes 16.03.14
---------------------------------------------------------------------------------------
- Updated LangPacks
- Added progress bar block and updated submodules in order to get progress bar working
- MDL-48778 assign: Use proper latest attempt for quickgrading prechecks
- Added delete temporary tables to cron


Changes 16.02.22
---------------------------------------------------------------------------------------
- Updated all related wiris plugins
- Moved local crons to Moodle tasks
- Updates to prepare for Moodle 3 version
- Updated Local Mobile


Changes 16.02.01
---------------------------------------------------------------------------------------
- Moodle upgraded to from 2.8.10
- Updated LangPacks