@@ -3,6 +3,11 @@ Release notes for Agora-Moodle2 (http://agora.xtec.cat)
 More information on each of the fixes can be found in the project
 development home at https://github.com/projectestac/agora_moodle2
 
+Changes in progress
+---------------------------------------------------------------------------------------
+- Updated auth/googleoauth2 to fix problems with login button (Trello #1321)
+
+
 Changes 16.08.22
 ---------------------------------------------------------------------------------------
 - Moodle upgraded to from 3.1.1 (Trello #1268)
